# backend-coding-challenge

./: TODO.md  makefile
dependencies/: pyproject.toml
environment/: backend.dockerfile  dockercompose.yml
gistapi/: gistapi.py
gistapi/tests/: test_client.py
gistapi/utils/: exceptions.py  gists_helpers.py  validations.py
