[tool.poetry]
name = "gistapi"
version = "0.1.0"
description = ""
authors = ["Danilo Paes"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.2.2"
requests = "2.28.1"
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
